tests/ok/inputs/pre_k_valid.obc
node pre_k_valid(x: int) returns (y: int)
locals
  prev: int;
states
  Init, Run;
init Init
trans
  Init -> Run {
    ensures {prev} = {x};
    y := 0;
    prev := x;
  }
  Run -> Run {
    requires {prev} = pre_k(x, 1);
    ensures {prev} = {x};
    y := prev;
    prev := x;
  }
end
