tests/fail/inputs/pre_k_ltl_invalid_no_x_k1.obc
node pre_k_ltl_invalid_no_x_k1(x: int) returns (y: int)
guarantee G( {y} = pre_k(x, 1) );
locals
  prev: int;
states
  Init, Run;
init Init
trans
  Init -> Run {
    ensures {prev} = {x};
    y := 0;
    prev := x;
  }
  Run -> Run {
    requires {prev} = pre_k(x, 1);
    ensures {prev} = {x};
    y := prev;
    prev := x;
  }
end
